--- a/package.json
+++ b/package.json
@@ -14,20 +14,25 @@
     "singleQuote": true
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
     "@portabletext/react": "3.0.11",
     "@sanity/client": "6.9.3",
     "@sanity/demo": "1.0.2",
     "@sanity/vision": "3.21.1",
     "@tailwindcss/typography": "0.5.10",
+    "framer-motion": "^10.18.0",
     "next": "14.0.3",
     "next-sanity": "6.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sanity": "3.21.1",
     "sanity-plugin-iframe-pane": "2.6.1",
-    "styled-components": "6.1.1"
+    "styled-components": "6.1.1",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
+    "@types/babel__core": "^7.20.5",
+    "@types/babel__traverse": "^7.20.5",
     "@types/react": "18.2.37",
     "autoprefixer": "^10.4.16",
     "eslint": "8.53.0",
