--- a/package.json
+++ b/package.json
@@ -20,30 +20,30 @@
     "@sanity/demo": "1.0.2",
     "@sanity/vision": "3.21.1",
     "@tailwindcss/typography": "0.5.10",
-    "framer-motion": "^10.18.0",
     "next": "14.1.0",
     "next-sanity": "6.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sanity": "3.21.1",
     "sanity-plugin-iframe-pane": "2.6.1",
-    "styled-components": "6.1.1",
+    "sharp": "^0.33.2",
+    "styled-components": "6.1.8",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/babel__core": "^7.20.5",
     "@types/babel__traverse": "^7.20.5",
-    "@types/react": "18.2.37",
-    "autoprefixer": "^10.4.16",
-    "eslint": "8.53.0",
+    "@types/react": "18.2.55",
+    "autoprefixer": "^10.4.17",
+    "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
-    "eslint-plugin-simple-import-sort": "10.0.0",
-    "postcss": "^8.4.33",
-    "prettier": "3.1.0",
+    "eslint-plugin-simple-import-sort": "12.0.0",
+    "postcss": "^8.4.35",
+    "prettier": "3.2.5",
     "prettier-plugin-packagejson": "2.4.10",
     "prettier-plugin-tailwindcss": "0.5.11",
     "tailwindcss": "^3.3.5",
-    "typescript": "5.2.2"
+    "typescript": "5.3.3"
   },
   "engines": {
     "node": ">=18"
